# controllers/c_order/cont_c_order.go
@@ -44,7 +44,7 @@ func NewContOrder(e *echo.Echo, a icorder.Usecase) {
 // @Param Version header string true "OS Device"
 // @Param id path string true "ID"
 // @Success 200 {object} tool.ResponseModel
-// @Router /capster-service/capster/order/{id} [get]
+// @Router /capster/order/{id} [get]
 func (u *ContOrder) GetDataBy(e echo.Context) error {
 	ctx := e.Request().Context()
 	if ctx == nil {
@@ -88,7 +88,7 @@ func (u *ContOrder) GetDataBy(e echo.Context) error {
 // @Param initsearch query string false "InitSearch"
 // @Param sortfield query string false "SortField"
 // @Success 200 {object} models.ResponseModelList
-// @Router /capster-service/capster/order [get]
+// @Router /capster/order [get]
 func (u *ContOrder) GetList(e echo.Context) error {
 	ctx := e.Request().Context()
 	if ctx == nil {
@@ -143,7 +143,7 @@ func (u *ContOrder) GetList(e echo.Context) error {
 // @Param Version header string true "OS Device"
 // @Param req body models.OrderPost true "req param #changes are possible to adjust the form of the registration form from frontend"
 // @Success 200 {object} tool.ResponseModel
-// @Router /capster-service/capster/order [post]
+// @Router /capster/order [post]
 func (u *ContOrder) Create(e echo.Context) error {
 	ctx := e.Request().Context()
 	if ctx == nil {
@@ -186,7 +186,7 @@ func (u *ContOrder) Create(e echo.Context) error {
 // @Param id path string true "ID"
 // @Param req body models.OrderStatus true "req param #changes are possible to adjust the form of the registration form from frontend"
 // @Success 200 {object} tool.ResponseModel
-// @Router /capster-service/capster/order/{id} [put]
+// @Router /capster/order/{id} [put]
 func (u *ContOrder) Update(e echo.Context) error {
 	ctx := e.Request().Context()
 	if ctx == nil {
@@ -235,7 +235,7 @@ func (u *ContOrder) Update(e echo.Context) error {
 // @Param Version header string true "OS Device"
 // @Param id path string true "ID"
 // @Success 200 {object} tool.ResponseModel
-// @Router /capster-service/capster/order/{id} [delete]
+// @Router /capster/order/{id} [delete]
 func (u *ContOrder) Delete(e echo.Context) error {
 	ctx := e.Request().Context()
 	if ctx == nil {
