# docs/swagger.json
@@ -11,7 +11,7 @@
         "version": "1.0"
     },
     "paths": {
-        "/capster-service/capster/auth/change_password": {
+        "/capster/auth/change_password": {
             "post": {
                 "produces": [
                     "application/json"
@@ -55,7 +55,7 @@
                 }
             }
         },
-        "/capster-service/capster/auth/forgot": {
+        "/capster/auth/forgot": {
             "post": {
                 "produces": [
                     "application/json"
@@ -99,7 +99,7 @@
                 }
             }
         },
-        "/capster-service/capster/auth/login": {
+        "/capster/auth/login": {
             "post": {
                 "produces": [
                     "application/json"
@@ -143,7 +143,7 @@
                 }
             }
         },
-        "/capster-service/capster/auth/logout": {
+        "/capster/auth/logout": {
             "post": {
                 "security": [
                     {
@@ -183,7 +183,7 @@
                 }
             }
         },
-        "/capster-service/capster/auth/register": {
+        "/capster/auth/register": {
             "post": {
                 "produces": [
                     "application/json"
@@ -227,7 +227,7 @@
                 }
             }
         },
-        "/capster-service/capster/auth/verify": {
+        "/capster/auth/verify": {
             "post": {
                 "produces": [
                     "application/json"
@@ -271,7 +271,7 @@
                 }
             }
         },
-        "/capster-service/capster/notification": {
+        "/capster/notification": {
             "get": {
                 "security": [
                     {
@@ -343,7 +343,7 @@
                 }
             }
         },
-        "/capster-service/capster/notification/beranda": {
+        "/capster/notification/beranda": {
             "get": {
                 "security": [
                     {
@@ -383,7 +383,7 @@
                 }
             }
         },
-        "/capster-service/capster/notification/{id}": {
+        "/capster/notification/{id}": {
             "get": {
                 "security": [
                     {
@@ -484,7 +484,7 @@
                 }
             }
         },
-        "/capster-service/capster/order": {
+        "/capster/order": {
             "get": {
                 "security": [
                     {
@@ -603,7 +603,7 @@
                 }
             }
         },
-        "/capster-service/capster/order/{id}": {
+        "/capster/order/{id}": {
             "get": {
                 "security": [
                     {
@@ -749,7 +749,7 @@
                 }
             }
         },
-        "/capster-service/capster/paket": {
+        "/capster/paket": {
             "get": {
                 "security": [
                     {
@@ -821,7 +821,7 @@
                 }
             }
         },
-        "/capster-service/capster/paket/{id}": {
+        "/capster/paket/{id}": {
             "get": {
                 "security": [
                     {
@@ -868,7 +868,7 @@
                 }
             }
         },
-        "/capster-service/capster/user": {
+        "/capster/user": {
             "get": {
                 "security": [
                     {
@@ -987,7 +987,7 @@
                 }
             }
         },
-        "/capster-service/capster/user/{id}": {
+        "/capster/user/{id}": {
             "get": {
                 "security": [
                     {
@@ -1133,7 +1133,7 @@
                 }
             }
         },
-        "/capster-service/fileupload": {
+        "/fileupload": {
             "post": {
                 "security": [
                     {
@@ -1333,9 +1333,7 @@
                 "all_column": {
                     "type": "string"
                 },
-                "data": {
-                    "type": "object"
-                },
+                "data": {},
                 "define_column": {
                     "type": "string"
                 },
@@ -1392,9 +1390,7 @@
         "tool.ResponseModel": {
             "type": "object",
             "properties": {
-                "data": {
-                    "type": "object"
-                },
+                "data": {},
                 "message": {
                     "description": "Code int         `json:\"code\"`",
                     "type": "string"
